syntax= "proto3";
option go_package="./proto";

package greet_services;

service GreetService{
    rpc SayHello (NoParams) returns (HelloResponse);   //Unary
    rpc SayHelloServerStreaming (NamesList) returns ( stream HelloResponse);
    rpc SayHelloClientStreaming (stream HelloRequest) returns (MessageList);
    rpc SayHelloBidirectionStreaming ( stream HelloRequest) returns (stream HelloResponse);
}

message NoParams{}

message HelloResponse{
    string message= 1;
}

message HelloRequest{
    string name= 1;
}

message NamesList{
    repeated string names=1;
}

message MessageList{
    repeated string messages=1;
}

